--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "express-tutorial",
   "version": "1.0.0",
   "scripts": {
-    "start": "nodemon server.js"},
+    "start": "nodemon server.js"
+  },
   "dependencies": {
     "body-parser": "~1.14.2",
     "ejs": "~2.4.1",
